muleplapeli/src/main/resources/api/examples/errors/502.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "BAD_GATEWAY"
      level: error
      description: "Oups... Something wrong on one of the underlying servers! Please contact the administrator to report the issue."